# ezppt

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml
config/: base_config.py  logging_config.py
examples/: examples1.pptx  examples3.pptx
src/agents/: create_project.py  get_pic.py  step_01_create_outline.py  step_02_create_html.py  step_02_plan_layout.py  step_03_create_html.py
src/api/: projects.py
src/html_convert_office/: html2office.py  html2pdf.py  pdf2pptx.py
src/models/: outline_model.py  outline_slide_model.py  project_model.py
src/prompts/: create_html_ppt.md  create_html_ppt_nopic.md  create_html_ppt_with_image.md  outline_prompt.md  outline_prompt_with_image.md  pic_understand.md  plan_layout.md
src/repository/: db_utils.py  outline_repo.py  project_repo.py  transaction_manager.py
src/services/chat/: chat.py  gemini_provider.py  openai_provider.py
src/services/search/: image_search.py  searxng_provider.py  web_search.py
src/utils/: help_utils.py  settings_tester.py
webui/css/: common.css  config.css  home.css  preview.css
webui/js/: common.js  config.js  home.js  preview.js
webui/pages/: config.html  home.html  preview.html
