[project]
name = "ezppt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apryse-sdk>=11.8.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "lxml>=6.0.0",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "pypdf>=6.0.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]
[tool.uv]
extra-index-url = ["https://pypi.apryse.com"]